--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "tszaszgreen/tszaszgreen.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "headshot.jpg"
+  avatar           : "profile.png"
   name             : "Taylor Szasz Green"
   pronouns         : # example: "she/her"  
   bio              : "PhD Candidate in Computational Biology"
