--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Starkville, MS"
   employer         : "Mississippi State University"
   uri              : # URL
-  email            : "ts748[at]msstate.edu"
+  email            : "ts748@msstate.edu"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
